--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     tools:context=".presentation.MainActivity">
+
+    <LinearLayout
+        android:id="@+id/verticalCounterLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_table_stroke"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toStartOf="@+id/scoreRecycler"
+        app:layout_constraintStart_toEndOf="@+id/participantsLayout"
+        app:layout_constraintTop_toTopOf="@id/participantsLayout" />
+
+    <LinearLayout
+        android:id="@+id/horizontalCounterLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_table_stroke"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="@+id/scoreRecycler"
+        app:layout_constraintStart_toStartOf="@+id/scoreRecycler"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/participantsLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_table_stroke"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintEnd_toStartOf="@id/verticalCounterLayout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalCounterLayout" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/scoreRecycler"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/verticalCounterLayout"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalCounterLayout"
         tools:itemCount="4"
         tools:listitem="@layout/score_cell" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
