--- a/app/src/main/res/layout/table_cell.xml
+++ b/app/src/main/res/layout/table_cell.xml
@@ -5,7 +5,7 @@
     android:background="@drawable/background_table_stroke">
 
     <EditText
-        android:id="@+id/scoreSell"
+        android:id="@+id/tableSell"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:gravity="center"
